module ApplicationCable
  class Channel < ActionCable::Channel::Base
    # Mandated by FR-10: OwnerEdit.Canvas, FR-11: New.Canvas, FR-12: ParticipantEdit.Canvas
  end
end
