class ApplicationJob < ActiveJob::Base
  # Mandated by FR-13: Export.Notebook

  # Automatically retry jobs that encountered a deadlock
  # retry_on ActiveRecord::Deadlocked

  # Most jobs are safe to ignore if the underlying records are no longer available
  # discard_on ActiveJob::DeserializationError
end
