class ApplicationRecord < ActiveRecord::Base
  # Mandated by all functional requirements

  primary_abstract_class
end
